# ai-deception-openenv

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
env/: attacker.py  deception.py  env.py  fake_server.py  test_env.py  test_server.py
server/: app.py
tasks/: easy.py  hard.py  medium.py  test_tasks.py
tasks/easy/: grader.py  task.py
tasks/hard/: grader.py  task.py
tasks/medium/: grader.py  task.py
