[project]
name = "ai-deception-openenv"
version = "0.1.0"
description = "AI Cyber Deception OpenEnv environment"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "flask",
    "requests",
    "pydantic",
    "openai",
    "uvicorn"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["env", "tasks"]
