[project]
name = "ai-deception-openenv"
version = "0.1.0"
description = "AI Cyber Deception OpenEnv"
requires-python = ">=3.10"

dependencies = [
    "flask",
    "requests",
    "pydantic",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
